<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="ru.voodster.testbinet.list.ListFragment"
        android:label="@string/navTitleList"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="ru.voodster.testbinet.add.AddFragment"
        android:label="@string/navTitleAdd"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="ru.voodster.testbinet.info.InfoFragment"
        android:label="@string/navTitleInfo"
        tools:layout="@layout/fragment_info" />
</navigation>