<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="add.AddFragment">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/add_textEditLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    android:textColorHint="@color/design_default_color_secondary_variant"
    app:layout_constraintBottom_toTopOf="@+id/add_linear">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/add_hint" />
</com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/add_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_textEditLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="5dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_save"
            android:text="@string/add_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:insetRight="5dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_cancel"
            android:text="@string/add_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:insetLeft="5dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>